fix: image cropper

--- a/src/app/shared/components/image-cropper/image-cropper.component.scss
+++ b/src/app/shared/components/image-cropper/image-cropper.component.scss
@@ -29,20 +29,32 @@
 
 .inner-container {
     margin:0 auto;
+    top: 0;
+    right: 0;
+    left:0;
+    bottom:0;
+    position:fixed;
     background-color: black;
     max-width:800px;
-        height:100vh;
-        display: grid;
-        align-items: center;
-        grid-template-rows: 1fr 1fr 1fr;
-        .cropper-inner {
-            max-height: 90vh;
-            display: flex;
-            image-cropper {
-                background-color: black;
-            }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .title-wrapper {
+        height: 50px;
+    }
+    .cropper-inner {
+       flex: auto;
+       display: flex;
+       align-items: center;
+       .crop-wrap {
+           height: fit-content;
+        image-cropper {
+            background-color: black;
+        }
+       }
     }
     .button-wrapper {
+        height: 50px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
